{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 21,
  "lineage": "4f37b845-06fe-5701-06b7-e62d39b2715b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:security-group/sg-05bd44091c2d6354f",
            "description": "security group for VPC Endpoints",
            "egress": [],
            "id": "sg-05bd44091c2d6354f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "354918380509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC Endpoint security group"
            },
            "tags_all": {
              "Name": "VPC Endpoint security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.infra"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "endpoint-ec2-messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:vpc-endpoint/vpce-0422cb4a9561ea416",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0422cb4a9561ea416",
            "ip_address_type": "ipv4",
            "owner_id": "354918380509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05bd44091c2d6354f"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.ec2.aws_security_group.vpc_endpoint_security_group",
            "module.vpc.aws_vpc.infra"
          ]
        },
        {
          "index_key": "endpoint-ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:vpc-endpoint/vpce-0a2cf7128060fb34f",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a2cf7128060fb34f",
            "ip_address_type": "ipv4",
            "owner_id": "354918380509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05bd44091c2d6354f"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.ec2.aws_security_group.vpc_endpoint_security_group",
            "module.vpc.aws_vpc.infra"
          ]
        },
        {
          "index_key": "endpoint-ssmm-essages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:vpc-endpoint/vpce-0abdc33c8028fcbe5",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0abdc33c8028fcbe5",
            "ip_address_type": "ipv4",
            "owner_id": "354918380509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05bd44091c2d6354f"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.ec2.aws_security_group.vpc_endpoint_security_group",
            "module.vpc.aws_vpc.infra"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b432710d168fc0a4",
            "arn": "arn:aws:ec2:us-east-1:354918380509:elastic-ip/eipalloc-0b432710d168fc0a4",
            "domain": "vpc",
            "id": "eipalloc-0b432710d168fc0a4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-205-178-2.compute-1.amazonaws.com",
            "public_ip": "18.205.178.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az1 eip"
            },
            "tags_all": {
              "Name": "nat gateway az1 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013479b075c022b01",
            "arn": "arn:aws:ec2:us-east-1:354918380509:elastic-ip/eipalloc-013479b075c022b01",
            "domain": "vpc",
            "id": "eipalloc-013479b075c022b01",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-216-98-245.compute-1.amazonaws.com",
            "public_ip": "44.216.98.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az2 eip"
            },
            "tags_all": {
              "Name": "nat gateway az2 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:security-group/sg-0a0f7cc84ee07d679",
            "description": "enable mysql/aurora access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0f7cc84ee07d679",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql/aurora access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ec09cd767555887"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database security group",
            "name_prefix": "",
            "owner_id": "354918380509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database security group"
            },
            "tags_all": {
              "Name": "database security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_security_group",
            "module.vpc.aws_vpc.infra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:security-group/sg-04ec09cd767555887",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ec09cd767555887",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2/alb security group",
            "name_prefix": "",
            "owner_id": "354918380509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2/alb security group"
            },
            "tags_all": {
              "Name": "ec2/alb security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.infra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:security-group/sg-0cd18c3027d928ea3",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd18c3027d928ea3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ec09cd767555887"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "354918380509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_security_group",
            "module.vpc.aws_vpc.infra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:internet-gateway/igw-0f65e8150494b545a",
            "id": "igw-0f65e8150494b545a",
            "owner_id": "354918380509",
            "tags": {
              "Name": "awsinfra-igw"
            },
            "tags_all": {
              "Name": "awsinfra-igw"
            },
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:route-table/rtb-0fcdea1c72c7445ff",
            "id": "rtb-0fcdea1c72c7445ff",
            "owner_id": "354918380509",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f65e8150494b545a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:subnet/subnet-0440f0109562352c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0440f0109562352c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354918380509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az1"
            },
            "tags_all": {
              "Name": "private subnet az1"
            },
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:subnet/subnet-03452dee87f49ed73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03452dee87f49ed73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354918380509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az2"
            },
            "tags_all": {
              "Name": "private subnet az2"
            },
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:subnet/subnet-0b105ddd6098cff55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b105ddd6098cff55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354918380509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:subnet/subnet-0d452f6a33ae88fa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d452f6a33ae88fa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354918380509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az2"
            },
            "tags_all": {
              "Name": "public subnet az2"
            },
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secure_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:subnet/subnet-09b52ea1ea14008a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b52ea1ea14008a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354918380509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure subnet az1"
            },
            "tags_all": {
              "Name": "secure subnet az1"
            },
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secure_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:subnet/subnet-0933c7734bd9d5871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0933c7734bd9d5871",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354918380509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure subnet az2"
            },
            "tags_all": {
              "Name": "secure subnet az2"
            },
            "vpc_id": "vpc-0767de2624ad42957"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354918380509:vpc/vpc-0767de2624ad42957",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0131378949c059c2c",
            "default_route_table_id": "rtb-0e6074a1958238ec8",
            "default_security_group_id": "sg-007f35b4b675e7f46",
            "dhcp_options_id": "dopt-04917a67559706935",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0767de2624ad42957",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6074a1958238ec8",
            "owner_id": "354918380509",
            "tags": {
              "Name": "awsinfra-vpc"
            },
            "tags_all": {
              "Name": "awsinfra-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}